Optimize mobile formatting Fixes #1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p id="lowestScore"> Lowest Score: <span id="lowestScore_value"></span> </p>
     <button onclick="newGame()">New Game</button>
   </div>
-  <div id="game"></div>
+  <div id="game" class="card-container"></div>
   <footer>Copyright &copy;
     <script>document.write(new Date().getFullYear())</script>
     <a href="https:github.com/nathanrydel" target="_blank">Nathan Rydel</a> All Rights Reserved
