--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>Memory Game!</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <link rel="shortcut icon" href="/assets/icons8-card-game-64.png" type="image/x-icon">
+  <link rel="shortcut icon" href="icons8-card-game-64.png" type="image/x-icon">
 </head>
 
 <body>
